tests/ui/type-pointer-asterisk.stderr
error: no rules expected the token `*`
 --> $DIR/type-pointer-asterisk.rs:6:16
  |
6 |     input = [{ * }]
  |                ^

error: aborting due to previous error

